WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132224
Webpages can trigger loads with invalid URLs
https://bugs.webkit.org/show_bug.cgi?id=132224
Summary
Webpages can trigger loads with invalid URLs
Darin Adler
Reported
2014-04-26 20:37:23 PDT
Webpages can trigger loads with invalid URLs
Attachments
Patch
(18.29 KB, patch)
2014-04-26 20:44 PDT
,
Darin Adler
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2014-04-26 20:44:33 PDT
Created
attachment 230252
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2014-04-27 01:07:59 PDT
(In reply to
comment #1
)
> Created an attachment (id=230252) [details] > Patch
I think this patch may be missing changes that were landed by accident in
r167851
for
Bug 132089
: <
http://trac.webkit.org/changeset/167851
>
David Kilzer (:ddkilzer)
Comment 3
2014-04-27 01:21:24 PDT
(In reply to
comment #2
)
> (In reply to
comment #1
) > > Created an attachment (id=230252) [details] [details] > > Patch > > I think this patch may be missing changes that were landed by accident in
r167851
for
Bug 132089
: > > <
http://trac.webkit.org/changeset/167851
>
These changes were rolled out in
r167852
: <
http://trac.webkit.org/changeset/167852
>
Darin Adler
Comment 4
2014-04-27 09:05:58 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (In reply to
comment #1
) > > I think this patch may be missing changes that were landed by accident in
r167851
for
Bug 132089
: > > > > <
http://trac.webkit.org/changeset/167851
> > > These changes were rolled out in
r167852
: > > <
http://trac.webkit.org/changeset/167852
>
Those changes were from a different try at fixing this bug; they are not needed.
Darin Adler
Comment 5
2014-04-27 09:06:52 PDT
Committed
r167856
: <
http://trac.webkit.org/changeset/167856
>
Renata Hodovan
Comment 6
2014-04-28 07:03:23 PDT
***
Bug 130894
has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 7
2014-06-11 10:03:00 PDT
<
rdar://problem/16697142
>
Daniel Bates
Comment 8
2014-06-17 12:43:37 PDT
(In reply to
comment #5
)
> Committed
r167856
: <
http://trac.webkit.org/changeset/167856
>
This change regressed the HSBC app. See
bug #133991
for more details.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug